generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}


model Company {
  id            String        @id @default(uuid()) @db.Uuid
  name          String
  mainUrl       String        
  headquarters  String?
  createdAt     DateTime      @default(now())
  isRemoteFirst Boolean
  jobPostings   JobPosting[]
  companySize   CompanySize?
  industry      Industry[]
  jobSources    JobSource[]
  htmlSelector  String?   
}

// NEW: Model to track different job posting sources for a company
model JobSource {
  id          String        @id @default(uuid()) @db.Uuid
  url         String        // URL where jobs are posted
  type        JobSourceType // Whether it's company's own site or a job board
  description String?       // Optional description (e.g., "Engineering careers page")
  isActive    Boolean       @default(true)
  lastChecked DateTime?     // When this source was last checked for new jobs
  
  // Relation to company
  company     Company       @relation(fields: [companyId], references: [id])
  companyId   String        @db.Uuid
  
  // Jobs found from this source
  jobPostings JobPosting[]
  
  @@unique([companyId, url]) // Prevent duplicate URLs for the same company
}

model JobPosting {
  id             String       @id @default(uuid()) @db.Uuid
  title          String
  url            String       @unique
  description    String?
  workMode       WorkMode?
  timezone       WorkRegion?
  location       String?
  aiScore        Int?         // Range: 0-10
  tags           String[]  
  datePosted     DateTime?
  createdAt      DateTime     @default(now())
  sentToTelegram Boolean      @default(false)
  
  company        Company      @relation(fields: [companyId], references: [id])
  companyId      String       @db.Uuid
  
  source         JobSource?   @relation(fields: [sourceId], references: [id])
  sourceId       String?      @db.Uuid 
}

enum JobSourceType {
  COMPANY_WEBSITE
  JOB_BOARD
}


enum WorkMode {
  REMOTE
  IN_OFFICE
  HYBRID
}

enum WorkRegion {
  EMEA       // Europe, Middle East, and Africa
  APAC       // Asia-Pacific
  NAM        // North America
  LATAM      // Latin America
  GLOBAL     // Worldwide/Global positions
  EU         // European Union specifically
  UK         // United Kingdom specifically
  ME         // Middle East specifically
  OCEANIA    // Australia, New Zealand, and Pacific Islands
  CUSTOM     // For specific timezone requirements
}

// model User {
//   id                      String       @id @default(uuid()) @db.Uuid
//   email                   String       @unique
//   name                    String
//   skills                  TechSkill[]
//   yearsOfExperience       Int
//   flexibleWithTechnologies Boolean      @default(false)  
//   currentResidence        String       // Country or city
//   preferredTimezones      WorkRegion[]
//   willingToRelocate       Boolean      @default(false)
//   remotePreference        WorkMode     @default(REMOTE)  
//   workAuthorizationCountries String[]  
//   minMonthlySalaryExpectation    Int?
//   preferredIndustries     Industry[]
//   preferredCompanySize    CompanySize?  
//   createdAt               DateTime     @default(now())
//   updatedAt               DateTime     @updatedAt
// }

enum TechSkill {
  JAVASCRIPT
  TYPESCRIPT
  PYTHON
  JAVA
  CSHARP
  GOLANG
  RUST
  RUBY
  PHP
  SWIFT
  KOTLIN
  CPP
  C
  SCALA
  
  // Frontend
  REACT
  ANGULAR
  VUE
  SVELTE
  HTML
  CSS
  SASS
  
  // Backend
  NODE_JS
  EXPRESS
  DJANGO
  FLASK
  SPRING
  LARAVEL
  RAILS
  
  // Database
  SQL
  POSTGRESQL
  MYSQL
  MONGODB
  REDIS
  ELASTICSEARCH
  
  // DevOps
  DOCKER
  KUBERNETES
  AWS
  AZURE
  GCP
  TERRAFORM
  JENKINS
  GITHUB_ACTIONS
  
  // Mobile
  REACT_NATIVE
  FLUTTER
  IOS
  ANDROID
  
  // Other
  GRAPHQL
  REST
  WEBSOCKETS
  MACHINE_LEARNING
  DATA_SCIENCE
  BLOCKCHAIN
  GAME_DEVELOPMENT
}

enum Industry {
  TECHNOLOGY
  FINANCE
  HEALTHCARE
  EDUCATION
  ECOMMERCE
  MEDIA
  GAMING
  TRAVEL
  TRANSPORTATION
  ENERGY
  MANUFACTURING
  CONSULTING
  NONPROFIT
  GOVERNMENT
  RETAIL
  REAL_ESTATE
  TELECOMMUNICATIONS
}

enum CompanySize {
  STARTUP      // 1-50 employees
  SMALL        // 51-200 employees
  MEDIUM       // 201-1000 employees
  LARGE        // 1001-5000 employees
  ENTERPRISE   // 5000+ employees
}

